--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
   <title>React App</title>
 </head>
 
+<!-- <body style="background-image: url('Library_complete.jpg');"> -->
+
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
